@@ -388,7 +388,8 @@ cl_boot(int argc, char **argv)
 #endif
 	aux = cl_list(
 #ifdef ENABLE_DLOPEN
-		6,CONS(make_constant_base_string("fas"), @'si::load-binary'),
+		7,CONS(make_constant_base_string("fas"), @'si::load-binary'),
+		CONS(make_constant_base_string("fasl"), @'si::load-binary',)
 #else
 		5,
 #endif
